Fixed table overflow

--- a/app/app/assets/style.css
+++ b/app/app/assets/style.css
@@ -87,7 +87,15 @@
     height: 100%;
 }
 
-table {
+.table {
     font-family: inherit !important;
     color: inherit !important;
+}
+
+.table thead {
+    display: none;
+}
+
+.table td {
+    padding: 5px;
 }
